reorder and move element

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,19 +24,26 @@
 
         <div class="main container-fluid">
             <div class="half" id="display">
-                <div class="wrapper">
-                    <h1 class="line">Chapter 1 : The great big Giraffe</h1>
-                    <div id="loading">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                <div class="container">
+                    <div class="bottom">
+                        <div class="bottom-wrapper">
+                            <a href="#" id="before">before</a>
+                            <a href="#" id="next">next</a>
+                        </div>
                     </div>
-                    <!--Content Here -->
-
+                    <div class="wrapper active" id="page0">
+                        <h1 class="line">Chapter 1 : The great big Giraffe</h1>
+                        <div id="loading">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <!--Content Here -->
+                    </div>
                 </div>
             </div>
             <div class="half" id="write">
-                <div class="wrapper">
+                <div class="container">
 
                     <h1 class="line">Continue the story!</h1>
                     <p id="caption" class="line">Start writing and become a contributing author. <br> Anything you submit will be updated in real time.</p>
